figma-kit/src/components/dialog.base/dialog.base.css
.fp-DialogBaseContent {
  font-family: var(--font-family-default);
  color: var(--figma-color-text);
  min-width: 160px;
  background-color: var(--figma-color-bg);
  border-radius: var(--radius-base);
  box-shadow: var(--elevation-500);
  overflow-y: auto;
  outline: 0;
}

.fp-DialogBaseHeader {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  height: calc(var(--space-10) + 1px);
  padding: var(--space-1) var(--space-4);
  border-bottom: 1px solid var(--figma-color-border);
  background-color: var(--figma-color-bg);
  border-radius: var(--radius-extra-small) var(--radius-extra-small) 0 0;
}

/* TODO: Replace with text */
.fp-DialogBaseTitle {
  font-size: var(--font-size-base);
  font-weight: var(--font-weight-semibold);
  line-height: var(--space-4);
}

.fp-DialogBaseControls {
  display: flex;
  align-items: center;
  margin-left: auto;
  margin-right: calc(var(--space-3) * -1);
}

.fp-DialogBaseSection {
  box-sizing: border-box;
  padding: var(--space-4);
  border-bottom: 1px solid var(--figma-color-border);

  &:where(:last-child) {
    border-bottom: 0;
  }

  &:where(.fp-DialogBaseSection-base) {
    padding: var(--space-4);
  }

  &:where(.fp-DialogBaseSection-small) {
    padding: var(--space-2) var(--space-4);
  }
}

.fp-DialogBaseOverlay {
  position: fixed;
  inset: 0;
  background-color: var(--color-dialog-overlay);
}

